fix(i18n): add missing translations [CDS 2404]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/bm-server-components/src/order-private-bandwidth/translations/Messages_de_DE.json
+++ b/packages/manager/modules/bm-server-components/src/order-private-bandwidth/translations/Messages_de_DE.json
@@ -102,5 +102,6 @@
   "plan_vrack-bandwidth-25000-upto-50000-scale-us": "25 Gbit/s unbegrenzt und garantiert",
   "plan_price_per_month": "/ Monat (zzgl. MwSt.)",
   "wizard_pay": "Bezahlen",
-  "wizard_close": "Schließen"
+  "wizard_close": "Schließen",
+  "server_node_order_bandwidth_warning": "Damit Ihr Cluster ordnungsgemäß funktioniert, muss für jeden Node Ihres Clusters die gleiche Bandbreitenoption aktiviert werden."
 }
