--- a/packages/manager/modules/nutanix/src/translations/Messages_es_ES.json
+++ b/packages/manager/modules/nutanix/src/translations/Messages_es_ES.json
@@ -15,5 +15,6 @@
   "nutanix_cluster_list_localisation_value": "{{dcName}} (rack {{rackName}})",
   "nutanix_order": "Contratar",
   "nutanix_cluster_list_pack_type": "Tipo de pack",
-  "nutanix_cluster_list_pack_type_details": "Ver el detalle"
+  "nutanix_cluster_list_pack_type_details": "Ver el detalle",
+  "nutanix_cluster_unit_gbps": "{{t0}} Gb/s"
 }
