--- a/packages/manager/modules/nutanix/src/translations/Messages_it_IT.json
+++ b/packages/manager/modules/nutanix/src/translations/Messages_it_IT.json
@@ -15,5 +15,6 @@
   "nutanix_cluster_list_localisation_value": "{{dcName}} (Rack {{rackName}})",
   "nutanix_order": "Ordina",
   "nutanix_cluster_list_pack_type": "Tipo di pack",
-  "nutanix_cluster_list_pack_type_details": "Visualizza dettagli"
+  "nutanix_cluster_list_pack_type_details": "Visualizza dettagli",
+  "nutanix_cluster_unit_gbps": "{{t0}} Gbps"
 }
