fix(i18n): add missing translations [CDS 2406]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_it_IT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_it_IT.json
@@ -157,5 +157,6 @@
   "sidebar_load_services": "Caricare i servizi",
   "sidebar_access_list": "Accedere alla lista",
   "sidebar_access_dashboard": "Accedere alla dashboard",
-  "sidebar_account_iam": "Identità e accessi (IAM)"
+  "sidebar_account_iam": "Identità e accessi (IAM)",
+  "sidebar_carbon_footprint": "La mia impronta di carbonio"
 }
