--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pl_PL.json
@@ -157,5 +157,6 @@
   "sidebar_load_services": "Pobieranie usług",
   "sidebar_access_list": "Dostęp do listy",
   "sidebar_access_dashboard": "Dostęp do interfejsu",
-  "sidebar_account_iam": "Tożsamości i uprawnienia (IAM)"
+  "sidebar_account_iam": "Tożsamości i uprawnienia (IAM)",
+  "sidebar_carbon_footprint": "Mój ślad węglowy"
 }
