--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
@@ -157,5 +157,6 @@
   "sidebar_load_services": "Carregar os serviços",
   "sidebar_access_list": "Aceder à lista",
   "sidebar_access_dashboard": "Aceder ao painel de controlo",
-  "sidebar_account_iam": "Identidades e acessos (IAM)"
+  "sidebar_account_iam": "Identidades e acessos (IAM)",
+  "sidebar_carbon_footprint": "A minha pegada de carbono"
 }
