--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_de_DE.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_de_DE.json
@@ -157,5 +157,6 @@
   "sidebar_load_services": "Dienste laden",
   "sidebar_access_list": "Zur Liste",
   "sidebar_access_dashboard": "Zum Dashboard",
-  "sidebar_account_iam": "Identity and Access (IAM)"
+  "sidebar_account_iam": "Identity and Access (IAM)",
+  "sidebar_carbon_footprint": "Mein CO2-Fußabdruck"
 }
