--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_en_GB.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_en_GB.json
@@ -157,5 +157,6 @@
   "sidebar_load_services": "Load services",
   "sidebar_access_list": "Access list",
   "sidebar_access_dashboard": "Access dashboard",
-  "sidebar_account_iam": "Identity and Access Management (IAM)"
+  "sidebar_account_iam": "Identity and Access Management (IAM)",
+  "sidebar_carbon_footprint": "My carbon footprint"
 }
