--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_es_ES.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_es_ES.json
@@ -157,5 +157,6 @@
   "sidebar_load_services": "Cargar los servicios",
   "sidebar_access_list": "Acceder a la lista",
   "sidebar_access_dashboard": "Acceder al panel de control",
-  "sidebar_account_iam": "Identidades y acceso (IAM)"
+  "sidebar_account_iam": "Identidades y acceso (IAM)",
+  "sidebar_carbon_footprint": "Mi huella de carbono"
 }
