--- a/packages/manager/apps/dedicated/client/app/common/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/common/translations/Messages_de_DE.json
@@ -465,13 +465,13 @@
   "core_vps_top_guide_8_title": "Cloud - im OVH Kunden-Interface ",
   "core_vps_top_guide_9_title": "Eine Instanz erstellen im OVH Kundencenter ",
   "core_type_of_guide_sd": "Dedicated Server",
-  "core_sd_top_guide_1_title": "Reinstallation",
-  "core_sd_top_guide_2_title": "Netboot",
-  "core_sd_top_guide_3_title": "Konfiguration des Reverse",
-  "core_sd_top_guide_4_title": "Konfiguration des sekundären DNS",
-  "core_sd_top_guide_5_title": "Einer Failover-IP eine virtuelle MAC Adresse zuweisen",
-  "core_sd_top_guide_6_title": "Eine Failover-IP umziehen",
-  "core_sd_top_guide_7_title": "Rescue-Modus",
+  "core_sd_top_guide_1_title": "Erste Schritte mit einem Dedicated Server",
+  "core_sd_top_guide_2_title": "Erste Schritte mit einem Kimsufi, So you Start oder Rise Dedicated Server",
+  "core_sd_top_guide_3_title": "Einen Dedicated Server absichern",
+  "core_sd_top_guide_4_title": "SSH-Schlüssel erstellen",
+  "core_sd_top_guide_5_title": "Verwendung des IPMI für Dedicated Server",
+  "core_sd_top_guide_6_title": "Daten von einem Dedicated Server auf einen anderen migrieren",
+  "core_sd_top_guide_7_title": "Neuinstallation von Windows Server konfigurieren",
   "core_sd_top_guide_8_title": "Ein Hardware RAID mit dem OVH Kundencenter erstellen",
   "core_sd_top_guide_firewall_title": "Firewall Network konfigurieren",
   "core_type_of_guide_pcc": "Hosted Private Cloud",
