--- a/packages/manager/apps/dedicated/client/app/common/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/common/translations/Messages_en_GB.json
@@ -466,13 +466,13 @@
   "core_vps_top_guide_8_title": "Cloud - In the OVH Control Panel",
   "core_vps_top_guide_9_title": "Create an instance in the OVH Control Panel",
   "core_type_of_guide_sd": "Dedicated Servers",
-  "core_sd_top_guide_1_title": "Re-installation",
-  "core_sd_top_guide_2_title": "Netboot",
-  "core_sd_top_guide_3_title": "Configure reverse DNS",
-  "core_sd_top_guide_4_title": "Configure secondary DNS",
-  "core_sd_top_guide_5_title": "Assign a virtual MAC address to a failover IP",
-  "core_sd_top_guide_6_title": "Move a failover IP address",
-  "core_sd_top_guide_7_title": "Rescue mode",
+  "core_sd_top_guide_1_title": "Getting started with a dedicated server",
+  "core_sd_top_guide_2_title": "Getting started with a Kimsufi, So you Start or Rise dedicated server",
+  "core_sd_top_guide_3_title": "Secure my dedicated server",
+  "core_sd_top_guide_4_title": "Create an SSH key",
+  "core_sd_top_guide_5_title": "Using the IPMI with dedicated servers",
+  "core_sd_top_guide_6_title": "Migrate data from one dedicated server to another",
+  "core_sd_top_guide_7_title": "Configure a new Windows Server installation",
   "core_sd_top_guide_8_title": "Create a Hard RAID in the OVH Control Panel ",
   "core_sd_top_guide_firewall_title": "Configure the Firewall Network",
   "core_type_of_guide_pcc": "Hosted Private Cloud",
