--- a/packages/manager/apps/dedicated/client/app/common/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/common/translations/Messages_es_ES.json
@@ -466,13 +466,13 @@
   "core_vps_top_guide_8_title": "Cloud - En el área de cliente de OVH",
   "core_vps_top_guide_9_title": "Crear una instancia en el área de cliente de OVH",
   "core_type_of_guide_sd": "Servidores dedicados",
-  "core_sd_top_guide_1_title": "Reinstalación",
-  "core_sd_top_guide_2_title": "Netboot",
-  "core_sd_top_guide_3_title": "Configurar el registro inverso",
-  "core_sd_top_guide_4_title": "Configurar el DNS secundario",
-  "core_sd_top_guide_5_title": "Asignar una dirección MAC virtual a una IP Failover",
-  "core_sd_top_guide_6_title": "Mover una dirección IP Failover",
-  "core_sd_top_guide_7_title": "Modo rescue",
+  "core_sd_top_guide_1_title": "Primeros pasos con un servidor dedicado",
+  "core_sd_top_guide_2_title": "Primeros pasos con un servidor dedicado Kimsufi, So you Start o Rise",
+  "core_sd_top_guide_3_title": "Proteger un servidor dedicado",
+  "core_sd_top_guide_4_title": "Crear una llave SSH",
+  "core_sd_top_guide_5_title": "Uso de IPMI para los servidores dedicados",
+  "core_sd_top_guide_6_title": "Migrar los datos de un servidor a otro",
+  "core_sd_top_guide_7_title": "Configurar una nueva instalación de Windows Server",
   "core_sd_top_guide_8_title": "Crear un RAID por hardware desde el área de cliente de OVH",
   "core_sd_top_guide_firewall_title": "Configurar el Firewall Network",
   "core_type_of_guide_pcc": "Cloud de Alojamiento Privado",
