--- a/packages/manager/apps/dedicated/client/app/common/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/dedicated/client/app/common/translations/Messages_fr_CA.json
@@ -466,20 +466,19 @@
   "core_vps_top_guide_8_title": "Cloud - Dans l'interface client OVH",
   "core_vps_top_guide_9_title": "Créer une instance dans l'espace client OVH",
   "core_type_of_guide_sd": "Serveurs Dédiés",
-  "core_sd_top_guide_1_title": "Réinstallation",
-  "core_sd_top_guide_2_title": "Netboot",
-  "core_sd_top_guide_3_title": "Configurer le reverse",
-  "core_sd_top_guide_4_title": "Configurer le DNS secondaire",
-  "core_sd_top_guide_5_title": "Assigner une adresse MAC virtuelle à une IP failover",
-  "core_sd_top_guide_6_title": "Déplacer une adresse IP failover",
-  "core_sd_top_guide_7_title": "Rescue mode",
-  "core_sd_top_guide_8_title": "Créer un raid hardware avec le manager OVH",
+  "core_sd_top_guide_1_title": "Premiers pas avec un serveur dédié",
+  "core_sd_top_guide_2_title": "Premiers pas avec un serveur dédié Kimsufi, So You Start ou Rise",
+  "core_sd_top_guide_3_title": "Sécuriser un serveur dédié",
+  "core_sd_top_guide_4_title": "Créer une clé SSH",
+  "core_sd_top_guide_5_title": "Utilisation de l'IPMI pour les serveurs dédiés",
+  "core_sd_top_guide_6_title": "Migrer les données d'un serveur dédié vers un autre",
+  "core_sd_top_guide_7_title": "Configurer une nouvelle installation de Windows Server",
   "core_sd_top_guide_firewall_title": "Configurer le Firewall Network",
   "core_type_of_guide_pcc": "Hosted Private Cloud",
   "core_pcc_top_guide_1_title": "Accéder à vSphere",
   "core_pcc_top_guide_2_title": "Déployer sa première machine virtuelle",
   "core_pcc_top_guide_3_title": "Configurer une adresse IP sur une machine virtuelle",
-  "core_pcc_top_guide_4_title": "Modifier la configuration d’une machine virtuelle",
+  "core_pcc_top_guide_4_title": "Modifier la configuration d'une machine virtuelle",
   "core_pcc_top_guide_5_title": "Connexion en SFTP",
   "core_pcc_top_guide_6_title": "Documentation officielle de VMware",
   "core_pcc_top_guide_7_title": "Suppression d'un hôte",
