--- a/packages/manager/apps/dedicated/client/app/common/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/common/translations/Messages_it_IT.json
@@ -466,13 +466,13 @@
   "core_vps_top_guide_8_title": "Cloud - Nell'interfaccia cliente OVH",
   "core_vps_top_guide_9_title": "Crea un'istanza dallo Spazio Cliente OVH",
   "core_type_of_guide_sd": "Server Dedicati",
-  "core_sd_top_guide_1_title": "Reinstallazione",
-  "core_sd_top_guide_2_title": "Netboot",
-  "core_sd_top_guide_3_title": "Configura il Reverse",
-  "core_sd_top_guide_4_title": "Configura il DNS secondario",
-  "core_sd_top_guide_5_title": "Assegna un indirizzo MAC virtuale a un IP Failover",
-  "core_sd_top_guide_6_title": "Trasferisci un indirizzo IP Failover",
-  "core_sd_top_guide_7_title": "Modalità Rescue",
+  "core_sd_top_guide_1_title": "Iniziare a utilizzare un server dedicato",
+  "core_sd_top_guide_2_title": "Iniziare a utilizzare un server dedicato Kimsufi, So you Start o Rise",
+  "core_sd_top_guide_3_title": "Mettere in sicurezza un server dedicato",
+  "core_sd_top_guide_4_title": "Creare una chiave SSH",
+  "core_sd_top_guide_5_title": "Utilizzo dell'IPMI sui server dedicati",
+  "core_sd_top_guide_6_title": "Migrare i dati da un server dedicato a un altro",
+  "core_sd_top_guide_7_title": "Configurare una nuova installazione di Windows Server",
   "core_sd_top_guide_8_title": "Crea un RAID hardware dal tuo Spazio Ciente OVH",
   "core_sd_top_guide_firewall_title": "Configura il Firewall Network",
   "core_type_of_guide_pcc": "Hosted Private Cloud",
