--- a/packages/manager/apps/dedicated/client/app/common/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/common/translations/Messages_pl_PL.json
@@ -466,13 +466,13 @@
   "core_vps_top_guide_8_title": "Cloud - W Panelu klienta OVH",
   "core_vps_top_guide_9_title": "Utworzenie instancji w Panelu klienta OVH",
   "core_type_of_guide_sd": "Serwery dedykowane",
-  "core_sd_top_guide_1_title": "Reinstalacja",
-  "core_sd_top_guide_2_title": "Netboot",
-  "core_sd_top_guide_3_title": "Skonfiguruj rewers",
-  "core_sd_top_guide_4_title": "Skonfiguruj DNS secondary",
-  "core_sd_top_guide_5_title": "Przypisz wirtualny adres MAC do adresu IP failover",
-  "core_sd_top_guide_6_title": "Przenieś adres IP failover",
-  "core_sd_top_guide_7_title": "Tryb rescue",
+  "core_sd_top_guide_1_title": "Pierwsze kroki z serwerem dedykowanym",
+  "core_sd_top_guide_2_title": "Pierwsze kroki z serwerem dedykowanym Kimsufi, So You Start lub Rise",
+  "core_sd_top_guide_3_title": "Bezpieczeństwo serwera dedykowanego",
+  "core_sd_top_guide_4_title": "Tworzenie klucza SSH",
+  "core_sd_top_guide_5_title": "Korzystanie z IPMI dla serwerów dedykowanych",
+  "core_sd_top_guide_6_title": "Przeniesienie danych z jednego serwera dedykowanego na inny",
+  "core_sd_top_guide_7_title": "Konfiguracja nowej instalacji Windows Server",
   "core_sd_top_guide_8_title": "Utwórz raid hardware w panelu manager OVH",
   "core_sd_top_guide_firewall_title": "Skonfiguruj Firewall Network",
   "core_type_of_guide_pcc": "Hosted Private Cloud",
