--- a/packages/manager/apps/dedicated/client/app/common/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/common/translations/Messages_pt_PT.json
@@ -466,13 +466,13 @@
   "core_vps_top_guide_8_title": "Cloud - Na interface de cliente OVH",
   "core_vps_top_guide_9_title": "Criar uma instância na Área de Cliente OVH",
   "core_type_of_guide_sd": "Servidores Dedicados",
-  "core_sd_top_guide_1_title": "Reinstalação",
-  "core_sd_top_guide_2_title": "Netboot",
-  "core_sd_top_guide_3_title": "Configurar a reverse",
-  "core_sd_top_guide_4_title": "Configurar o DNS secundário",
-  "core_sd_top_guide_5_title": "Atribuir um MAC virtual a um endereço IP Failover",
-  "core_sd_top_guide_6_title": "Migrar um endereço IP Failover",
-  "core_sd_top_guide_7_title": "Modo Rescue",
+  "core_sd_top_guide_1_title": "Primeiros passos com um servidor dedicado",
+  "core_sd_top_guide_2_title": "Primeiros passos com um servidor dedicado Kimsufi, So You Start ou Rise",
+  "core_sd_top_guide_3_title": "Proteger um servidor dedicado",
+  "core_sd_top_guide_4_title": "Criar uma chave SSH",
+  "core_sd_top_guide_5_title": "Utilização do IPMI para servidores dedicados",
+  "core_sd_top_guide_6_title": "Migrar os dados de um servidor dedicado para outro",
+  "core_sd_top_guide_7_title": "Configurar uma nova instalação do Windows Server",
   "core_sd_top_guide_8_title": "Criar um Raid Hardware na Área de Cliente OVH",
   "core_sd_top_guide_firewall_title": "Configurar a \"Firewall Network\"",
   "core_type_of_guide_pcc": "Hosted Private Cloud",
