--- a/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_de_DE.json
@@ -6,6 +6,6 @@
   "pci_projects_project_sshKeys_add_error": "Beim Hinzufügen des SSH-Schlüssels ist ein Fehler aufgetreten: {{ error }}",
   "pci_projects_project_sshKeys_add_name": "Name",
   "pci_projects_project_sshKeys_add_key": "Schlüssel",
-  "pci_projects_project_sshKeys_add_key_description": "Geben Sie Ihren Schlüssel mit 4096 Bytes an.",
-  "pci_projects_project_sshKeys_add_infos": "Nur SSH-Schlüssel vom Typ RSA oder ECDSA werden angenommen. Sie können keine SSH-Schlüssel vom Typ ED25519 verwenden."
+  "pci_projects_project_sshKeys_add_key_description": "Schlüssel eingeben",
+  "pci_projects_project_sshKeys_add_infos": "Akzeptiert werden SSH-Schlüssel vom Typ RSA, ECDSA und ED25519."
 }
