--- a/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_es_ES.json
@@ -6,6 +6,6 @@
   "pci_projects_project_sshKeys_add_error": "Se ha producido un error al añadir la llave SSH: {{ error }}",
   "pci_projects_project_sshKeys_add_name": "Nombre",
   "pci_projects_project_sshKeys_add_key": "Clave",
-  "pci_projects_project_sshKeys_add_key_description": "Introduzca su llave de 4096 bytes.",
-  "pci_projects_project_sshKeys_add_infos": "Solo se aceptan llaves SSH de tipo RSA o ECDSA. No es posible utilizar llaves SSH de tipo ED25519."
+  "pci_projects_project_sshKeys_add_key_description": "Introduzca su llave",
+  "pci_projects_project_sshKeys_add_infos": "Se aceptan las llaves SSH de tipo RSA, ECDSA y ED25519."
 }
