--- a/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_fr_CA.json
@@ -6,6 +6,6 @@
   "pci_projects_project_sshKeys_add_error": "Une erreur est survenue lors de l'ajout de la clé SSH : {{ error }}",
   "pci_projects_project_sshKeys_add_name": "Nom",
   "pci_projects_project_sshKeys_add_key": "Clé",
-  "pci_projects_project_sshKeys_add_key_description": "Entrez votre clé de 4096 bytes",
-  "pci_projects_project_sshKeys_add_infos": "Seules les clés SSH de type RSA ou ECDSA sont acceptées. Vous ne pouvez utiliser de clés SSH de type ED25519."
+  "pci_projects_project_sshKeys_add_key_description": "Entrez votre clé",
+  "pci_projects_project_sshKeys_add_infos": "Les clés SSH de type RSA, ECDSA et ED25519 sont acceptées."
 }
