--- a/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_pl_PL.json
@@ -6,6 +6,6 @@
   "pci_projects_project_sshKeys_add_error": "Wystąpił błąd podczas dodawania klucza SSH: {{ error }}.",
   "pci_projects_project_sshKeys_add_name": "Nazwa",
   "pci_projects_project_sshKeys_add_key": "Klucz",
-  "pci_projects_project_sshKeys_add_key_description": "Wpisz klucz o rozmiarze 4096 bajtów.",
-  "pci_projects_project_sshKeys_add_infos": "Akceptowane są tylko klucze SSH typu RSA lub ECDSA. Nie można używać kluczy SSH typu ED25519."
+  "pci_projects_project_sshKeys_add_key_description": "Wprowadź klucz",
+  "pci_projects_project_sshKeys_add_infos": "Akceptowane są klucze SSH typu RSA, ECDSA i ED25519."
 }
