--- a/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/ssh-keys/add/translations/Messages_pt_PT.json
@@ -6,6 +6,6 @@
   "pci_projects_project_sshKeys_add_error": "Ocorreu um erro ao adicionar a chave SSH: {{ error }}",
   "pci_projects_project_sshKeys_add_name": "Nome",
   "pci_projects_project_sshKeys_add_key": "Chave",
-  "pci_projects_project_sshKeys_add_key_description": "Introduza a sua chave de 4096 bytes",
-  "pci_projects_project_sshKeys_add_infos": "Só são aceites as chaves SSH de tipo RSA ou ECDSA. Não é possível utilizar chaves SSH de tipo ED25519."
+  "pci_projects_project_sshKeys_add_key_description": "Introduza a sua chave",
+  "pci_projects_project_sshKeys_add_infos": "São aceites as chaves SSH RSA, ECDSA e ED25519."
 }
