fix(i18n): add missing translations [CDS 2411]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_de_DE.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_de_DE.json
@@ -4,11 +4,11 @@
   "vps_dashboard_tile_configuration_memory": "Arbeitsspeicher",
   "vps_dashboard_tile_configuration_memory_add": "Arbeitsspeicher hinzufügen",
   "vps_dashboard_tile_configuration_memory_add_upscale": "RAM hinzufügen und dazu zur nächsthöheren Serverreihe wechseln.",
-  "vps_dashboard_tile_configuration_memory_double": "Den Arbeitsspeicher zum Preis von {{ price }}/Monat verdoppeln",
+  "vps_dashboard_tile_configuration_memory_double": "Verdoppelung des Arbeitsspeichers für zusätzliche {{ additionalPrice }}/Monat, was insgesamt {{ price }}/Monat entspricht",
   "vps_dashboard_tile_configuration_storage": "Speicher",
   "vps_dashboard_tile_configuration_storage_add": "Speicherkapazität erhöhen",
   "vps_dashboard_tile_configuration_storage_add_upscale": "Speicherkapazität hinzufügen und dazu zur nächsthöheren Serverreihe wechseln.",
-  "vps_dashboard_tile_configuration_storage_double": "Den Speicherplatz zum Preis von {{ price }}/Monat verdoppeln",
+  "vps_dashboard_tile_configuration_storage_double": "Verdoppelung des Speicherplatzes für zusätzliche {{ additionalPrice }}/Monat, was insgesamt {{ price }}/Monat entspricht",
   "vps_dashboard_tile_configuration_upgrade_confirmation_title": "Die von Ihnen gewünschte Veränderung wurde registriert.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_details": "Sie werden innerhalb der nächsten zwei Stunden eine E-Mail erhalten, die bestätigt, dass die Änderungen an Ihrem VPS erfolgt sind. Um Ihre neue Konfiguration zu nutzen, müssen Sie Ihren VPS neu starten.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_track_order": "Meine Bestellung verfolgen",
