--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_pl_PL.json
@@ -4,11 +4,11 @@
   "vps_dashboard_tile_configuration_memory": "Pamięć",
   "vps_dashboard_tile_configuration_memory_add": "Dodaj pamięć",
   "vps_dashboard_tile_configuration_memory_add_upscale": "Dodaj pamięć i zmień gamę na wyższą.",
-  "vps_dashboard_tile_configuration_memory_double": "Zwiększ dwukrotnie pamięć za {{price}}/m-c",
+  "vps_dashboard_tile_configuration_memory_double": "Zwiększ dwukrotnie pamięć za dodatkową opłatą {{additionalPrice}}/m-c, tj. łącznie {{price}}/m-c",
   "vps_dashboard_tile_configuration_storage": "Przestrzeń dyskowa",
   "vps_dashboard_tile_configuration_storage_add": "Zwiększ przestrzeń dyskową",
   "vps_dashboard_tile_configuration_storage_add_upscale": "Zwiększ przestrzeń dyskową i zmień gamę na wyższą.",
-  "vps_dashboard_tile_configuration_storage_double": "Zwiększ dwukrotnie przestrzeń dyskową za {{price}}/m-c",
+  "vps_dashboard_tile_configuration_storage_double": "Zwiększ dwukrotnie przestrzeń dyskową za dodatkową opłatą {{additionalPrice}}/m-c, tj. łącznie {{price}}/m-c",
   "vps_dashboard_tile_configuration_upgrade_confirmation_title": "Wprowadzona przez Ciebie zmiana została przyjęta.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_details": "W ciągu dwóch godzin od wdrożenia zmiany na serwerze VPS otrzymasz e-mail z potwierdzeniem. Nowa konfiguracja zacznie działać po zrestartowaniu serwera.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_track_order": "Sprawdzanie statusu zamówienia",
