--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_en_GB.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_en_GB.json
@@ -4,11 +4,11 @@
   "vps_dashboard_tile_configuration_memory": "Memory",
   "vps_dashboard_tile_configuration_memory_add": "Add memory",
   "vps_dashboard_tile_configuration_memory_add_upscale": "Add more memory by upgrading to the higher range",
-  "vps_dashboard_tile_configuration_memory_double": "Double the memory for {{ price }}/month",
+  "vps_dashboard_tile_configuration_memory_double": "Double the memory for an additional price of {{ additionalPrice }}/month, i.e. a total of {{ price }}/month",
   "vps_dashboard_tile_configuration_storage": "Storage",
   "vps_dashboard_tile_configuration_storage_add": "Increase the volume of storage",
   "vps_dashboard_tile_configuration_storage_add_upscale": "Add more storage by upgrading to the higher range",
-  "vps_dashboard_tile_configuration_storage_double": "Double the storage capacity for {{ price }}/month",
+  "vps_dashboard_tile_configuration_storage_double": "Double the storage space for an additional price of {{ additionalPrice }}/month, i.e. a total of {{ price }}/month",
   "vps_dashboard_tile_configuration_upgrade_confirmation_title": "The change has been processed.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_details": "You will receive a confirmation email within two hours, when the changes are applied to your VPS. You will need to reboot your VPS for the new configuration to work.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_track_order": "Track my order",
