--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_it_IT.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_it_IT.json
@@ -4,11 +4,11 @@
   "vps_dashboard_tile_configuration_memory": "Memoria",
   "vps_dashboard_tile_configuration_memory_add": "Aggiungi memoria",
   "vps_dashboard_tile_configuration_memory_add_upscale": "Aggiungi memoria passando alla gamma superiore",
-  "vps_dashboard_tile_configuration_memory_double": "Raddoppia la memoria per {{ price }}/mese",
+  "vps_dashboard_tile_configuration_memory_double": "Raddoppiare la memoria a un prezzo aggiuntivo di {{ additionalPrice }}/mese, per un totale di {{ price }}/mese",
   "vps_dashboard_tile_configuration_storage": "Storage",
   "vps_dashboard_tile_configuration_storage_add": "Aumenta il volume di storage",
   "vps_dashboard_tile_configuration_storage_add_upscale": "Aumenta lo storage passando alla gamma superiore",
-  "vps_dashboard_tile_configuration_storage_double": "Raddoppia lo spazio di storage per {{ price }}/mese",
+  "vps_dashboard_tile_configuration_storage_double": "Raddoppiare lo spazio di storage a un prezzo aggiuntivo di {{ additionalPrice }}/mese, per un totale di {{ price }}/mese",
   "vps_dashboard_tile_configuration_upgrade_confirmation_title": "La modifica è stata presa in carico.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_details": "Una volta che le modifiche diventeranno effettive sul VPS, riceverai un’email di conferma entro 2 ore. Per utilizzare la nuova configurazione sarà necessario riavviare la macchina.",
   "vps_dashboard_tile_configuration_upgrade_confirmation_track_order": "Segui il tuo ordine",
