Revert "feat(pci.ai): add sync failed status in ai tools (#9614)"
This reverts commit b8d5d53d1eddb024ab0d5d2f9b46b39e5f130f58.

--- a/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_it_IT.json
@@ -29,6 +29,5 @@
   "pci_notebook_permission_RW": "Lettura e scrittura",
   "pci_notebook_permission_RWD": "Lettura, scrittura ed eliminazione",
   "pci_notebook_data_cache": "Cache",
-  "pci_notebook_list_status_DELETING": "Eliminazione in corso...",
-  "pci_notebook_list_status_SYNC_FAILED": "Sincronizzazione non riuscita"
+  "pci_notebook_list_status_DELETING": "Eliminazione in corso..."
 }
