--- a/packages/manager/modules/pci/src/projects/project/notebooks/dashboard/general-information/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/notebooks/dashboard/general-information/translations/Messages_it_IT.json
@@ -46,6 +46,5 @@
   "pci_notebooks_general_information_other_resources_info_workspace_storage": "Spazio di lavoro: {{ storage }} SSD incluso",
   "pci_notebooks_general_information_other_resources_info_ephemeral_storage_popover": "Storage locale performante senza backup",
   "pci_notebooks_general_information_other_resources_info_workspace_storage_popover": "Storage remoto con backup Dopo 30 giorni consecutivi di utilizzo dello storage o al superamento della quota di {{freeStorage}}, le tariffe applicate saranno quelle del servizio Public Cloud Object Storage.",
-  "pci_notebooks_general_information_other_resources_info_bandwidth": "Rete pubblica: {{ bandwidth }}/s",
-  "pci_notebooks_general_information_life_cycle_status_SYNC_FAILED": "Sincronizzazione non riuscita"
+  "pci_notebooks_general_information_other_resources_info_bandwidth": "Rete pubblica: {{ bandwidth }}/s"
 }
