--- a/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_de_DE.json
@@ -29,6 +29,5 @@
   "pci_notebook_permission_RW": "Lesen/Schreiben",
   "pci_notebook_permission_RWD": "Lesen &amp; Schreiben &amp; Löschen",
   "pci_notebook_data_cache": "Cache",
-  "pci_notebook_list_status_DELETING": "Wird gelöscht",
-  "pci_notebook_list_status_SYNC_FAILED": "Synchronisierungsfehler"
+  "pci_notebook_list_status_DELETING": "Wird gelöscht"
 }
