--- a/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/notebooks/translations/Messages_es_ES.json
@@ -29,6 +29,5 @@
   "pci_notebook_permission_RW": "Lectura y escritura",
   "pci_notebook_permission_RWD": "Lectura, escritura y eliminación",
   "pci_notebook_data_cache": "Caché",
-  "pci_notebook_list_status_DELETING": "Eliminando...",
-  "pci_notebook_list_status_SYNC_FAILED": "Error de sincronización"
+  "pci_notebook_list_status_DELETING": "Eliminando..."
 }
