--- a/packages/manager/modules/pci/src/projects/project/training/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/training/translations/Messages_it_IT.json
@@ -32,6 +32,5 @@
   "pci_projects_project_training_jobs_price": "Prezzo",
   "pci_projects_project_training_jobs_price_estimate": "Stima del tempo di esecuzione del job",
   "pci_projects_project_training_jobs_state_TIMEOUT": "Timeout",
-  "pci_projects_project_training_discord": "OVHcloud AI Community on Discord",
-  "pci_projects_project_training_jobs_state_SYNC_FAILED": "Sincronizzazione non riuscita"
+  "pci_projects_project_training_discord": "OVHcloud AI Community on Discord"
 }
