--- a/packages/manager/modules/pci/src/projects/project/training/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/training/translations/Messages_pt_PT.json
@@ -32,6 +32,5 @@
   "pci_projects_project_training_jobs_price": "Preço",
   "pci_projects_project_training_jobs_price_estimate": "Estimativa do tempo de execução do job",
   "pci_projects_project_training_jobs_state_TIMEOUT": "Timeout",
-  "pci_projects_project_training_discord": "Comunidade OVHcloud AI em Discord",
-  "pci_projects_project_training_jobs_state_SYNC_FAILED": "Falha na sincronização"
+  "pci_projects_project_training_discord": "Comunidade OVHcloud AI em Discord"
 }
