fix(i18n): add missing translations [CDS 2421]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/exchange/src/dashboard/translations/Messages_es_ES.json
+++ b/packages/manager/modules/exchange/src/dashboard/translations/Messages_es_ES.json
@@ -1635,5 +1635,14 @@
   "exchange_resilitation_cancel_action_confirmation_2": "¿Quiere realizar dicha operación?",
   "exchange_resilitation_cancel_action_confirmation_3": "En ese caso, el servicio pasará a renovación automática.",
   "exchange_update_billing_periode_intro_1": "Elija la frecuencia para la renovación automática de cada cuenta.",
-  "exchange_update_billing_periode_intro_2": "Se aplicará a partir de la siguiente renovación."
+  "exchange_update_billing_periode_intro_2": "Se aplicará a partir de la siguiente renovación.",
+  "exchange_wizardHostedCreation_configureDNSZone_manual_table_spf": "SPF",
+  "exchange_tab_domain_diagnostic_spf_intro_ovh": "Si su dominio está alojado en OVH, puede configurar el campo SPF del dominio {0} como se indica a continuación",
+  "exchange_tab_domain_diagnostic_spf_label_champ": "Registro SPF",
+  "exchange_tab_domain_diagnostic_spf_config": "Subdominio: <strong>{0}</strong><br /> Destino: <strong>{4}</strong>",
+  "exchange_tab_domain_diagnostic_spf_no_ovh": "Si el dominio no es gestionado por el mismo ID de cliente que el servicio Exchange, o si el dominio no está alojado en OVH, no es posible realizar la configuración automática. En ese caso, cree el registro SPF en el dominio manualmente introduciendo la información arriba indicada.",
+  "exchange_tab_domain_diagnostic_spf_recap": "Va a añadir un registro SPF a la zona DNS del dominio.",
+  "exchange_tab_domain_diagnostic_spf": "SPF",
+  "exchange_tab_domain_diagnostic_spf_title": "Diagnóstico SPF",
+  "exchange_tab_domain_diagnostic_spf_toolbox_ok": "Se ha realizado la configuración automática."
 }
