--- a/packages/manager/modules/exchange/src/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/modules/exchange/src/dashboard/translations/Messages_de_DE.json
@@ -1635,5 +1635,14 @@
   "exchange_reset_mfa_success": "Die Zwei-Faktor-Authentifizierung wurde zurückgesetzt.",
   "exchange_mfa_error": "Es ist ein Fehler aufgetreten: {{error}}",
   "exchange_delete_mfa_success": "Die Zwei-Faktor-Authentifizierung wurde gelöscht.",
-  "exchange_delete_mfa_error": "Bei der Löschung der Zwei-Faktor-Authentifizierung ist ein Fehler aufgetreten: {{error}}"
+  "exchange_delete_mfa_error": "Bei der Löschung der Zwei-Faktor-Authentifizierung ist ein Fehler aufgetreten: {{error}}",
+  "exchange_wizardHostedCreation_configureDNSZone_manual_table_spf": "SPF",
+  "exchange_tab_domain_diagnostic_spf_intro_ovh": "Ihre Domain {0} ist bei OVH gehostet, Sie können deren SPF-Eintrag wie folgt konfigurieren",
+  "exchange_tab_domain_diagnostic_spf_label_champ": "SPF-Eintrag",
+  "exchange_tab_domain_diagnostic_spf_config": "Subdomain: <strong>{0}</strong><br /> Ziel: <strong>{4}</strong>",
+  "exchange_tab_domain_diagnostic_spf_no_ovh": "Wenn die Domain nicht über dieselbe Kundenkennung wie Exchange verwaltet oder nicht bei OVH gehostet wird, ist die automatische Konfiguration nicht möglich. Erstellen Sie in diesem Fall den MX-Eintrag für diese Domain manuell unter Verwendung der untenstehenden Informationen.",
+  "exchange_tab_domain_diagnostic_spf_recap": "Es wird ein SPF-Eintrag zur DNS-Zone Ihrer Domain hinzugefügt.",
+  "exchange_tab_domain_diagnostic_spf": "SPF",
+  "exchange_tab_domain_diagnostic_spf_title": "SPF-Diagnose",
+  "exchange_tab_domain_diagnostic_spf_toolbox_ok": "Automatische Konfiguration ausgeführt"
 }
