--- a/packages/manager/modules/exchange/src/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/modules/exchange/src/dashboard/translations/Messages_en_GB.json
@@ -1635,5 +1635,14 @@
   "exchange_reset_mfa_success": "The two-factor authentication has been successfully reset.",
   "exchange_mfa_error": "An error has occurred: {{error}}",
   "exchange_delete_mfa_success": "The two-factor authentication was successfully deleted.",
-  "exchange_delete_mfa_error": "An error has occurred deleting the two-factor authentication: {{error}}"
+  "exchange_delete_mfa_error": "An error has occurred deleting the two-factor authentication: {{error}}",
+  "exchange_wizardHostedCreation_configureDNSZone_manual_table_spf": "SPF",
+  "exchange_tab_domain_diagnostic_spf_intro_ovh": "If your domain is hosted with OVH, you can configure the SPF record for your {0} domain as follows",
+  "exchange_tab_domain_diagnostic_spf_label_champ": "SPF record",
+  "exchange_tab_domain_diagnostic_spf_config": "Sub-domain: <strong>{0}</strong><br /> Target: <strong>{4}</strong>",
+  "exchange_tab_domain_diagnostic_spf_no_ovh": "If the domain is not managed under the same NIC handle as the Exchange solution, or if your domain is registered elsewhere, automatic configuration is not available. Please create the SPF record on this domain manually, giving the same information as below.",
+  "exchange_tab_domain_diagnostic_spf_recap": "An SPF record will be added to your domain’s DNS zone.",
+  "exchange_tab_domain_diagnostic_spf": "SPF",
+  "exchange_tab_domain_diagnostic_spf_title": "SPF diagnostic",
+  "exchange_tab_domain_diagnostic_spf_toolbox_ok": "Automatic configuration complete"
 }
