--- a/packages/manager/modules/emailpro/src/dashboard/translations/Messages_it_IT.json
+++ b/packages/manager/modules/emailpro/src/dashboard/translations/Messages_it_IT.json
@@ -865,5 +865,13 @@
   "emailpro_resilitation_cancel_action_confirmation_1": "Stai per annullare la disattivazione del servizio \"{0}\".",
   "emailpro_resilitation_cancel_action_confirmation_2": "Vuoi procedere con questa operazione?",
   "emailpro_resilitation_cancel_action_confirmation_3": "Il servizio passerà in rinnovo automatico.",
-  "emailpro_GROUPS_partial_account": "Si è verificato un errore durante il caricamento: {0}"
+  "emailpro_GROUPS_partial_account": "Si è verificato un errore durante il caricamento: {0}",
+  "emailpro_tab_domain_diagnostic_spf_intro_ovh": "Il tuo dominio è ospitato in OVHcloud, puoi configurare il record SPF del dominio {0} nel modo seguente",
+  "emailpro_tab_domain_diagnostic_spf_label_champ": "Record SPF",
+  "emailpro_tab_domain_diagnostic_spf_config": "Sottodominio: <strong>{{t0}}</strong><br /> Destinazione: <strong>{{t1}}</strong>",
+  "emailpro_tab_domain_diagnostic_spf_no_ovh": "Se il dominio non è gestito dallo stesso identificativo cliente della tua piattaforma Exchange o non è registrato in OVH, non è possibile eseguire la configurazione automatica. Crea manualmente il record SPF su questo dominio fornendo le stesse informazioni indicate qui sotto.",
+  "emailpro_tab_domain_diagnostic_spf_recap": "Un record SPF sarà aggiunto alla zona DNS del tuo dominio.",
+  "emailpro_tab_domain_diagnostic_spf": "SPF",
+  "emailpro_tab_domain_diagnostic_spf_title": "Diagnostica SPF",
+  "emailpro_tab_domain_diagnostic_spf_toolbox_ok": "Configurazione automatica effettuata"
 }
