fix: pr comments
DATATR-330

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/components/delete/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/components/delete/translations/Messages_fr_FR.json
@@ -4,5 +4,5 @@
   "pci_ai_apps_delete": "Suppression de l'app",
   "pci_ai_apps_delete_common_delete": "Confirmer",
   "pci_ai_apps_delete_common_cancel": "Annuler",
-  "pci_ai_apps_delete_warning": "Êtes-vous sûr de vouloir supprimer l'app <strong>{{ appId }}</strong> ?"
+  "pci_ai_apps_delete_warning": "Êtes-vous sûr de vouloir supprimer l'app {{ appId }} ?"
 }
